--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
+    "ejs-webpack-loader": "^2.2.2",
     "file-loader": "^6.2.0",
-    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "http-server": "^0.12.3",
     "mini-css-extract-plugin": "^1.3.1",
