--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "babel-eslint": "^10.1.0",
-    "copy-webpack-plugin": "^6.3.2",
-    "eslint-plugin-prettier": "^3.2.0",
     "normalize.css": "^8.0.1"
   },
   "scripts": {
@@ -37,14 +34,15 @@
     "http-server": "^0.12.3",
     "mini-css-extract-plugin": "^1.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "prettier": "^2.2.1",
-    "standard": "^16.0.3",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^4.2.3",
     "url-loader": "^4.1.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "babel-eslint": "^10.1.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "copy-webpack-plugin": "^6.3.2"
   },
   "standard": {
     "env": [
